test/variables/ref/errors-type-mismatch-fn-1.chpl
var global: int;

record rec {
  var A: int;

  proc this() ref : real {
    return global;
  }
}

var r = new rec();
writeln(r());
